<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".ShoppingCategoryActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shop_by_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/shop_by_categories"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/electronicsImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/electronics"
        app:layout_constraintEnd_toStartOf="@+id/clothingImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_by_categories" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/electronicsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/electronics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/electronicsImage"
        app:layout_constraintStart_toStartOf="@+id/electronicsImage"
        app:layout_constraintTop_toBottomOf="@+id/electronicsImage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/clothingImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/clothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/electronicsImage"
        app:layout_constraintTop_toBottomOf="@+id/shop_by_categories" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/clothingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clothing"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/clothingImage"
        app:layout_constraintStart_toStartOf="@+id/clothingImage"
        app:layout_constraintTop_toBottomOf="@+id/clothingImage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/beautyImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/beauty"
        app:layout_constraintEnd_toStartOf="@+id/clothingImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electronicsText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/beautyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beauty"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/beautyImage"
        app:layout_constraintStart_toStartOf="@+id/beautyImage"
        app:layout_constraintTop_toBottomOf="@+id/beautyImage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/foodImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/beautyImage"
        app:layout_constraintTop_toBottomOf="@+id/clothingText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/foodText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/foodImage"
        app:layout_constraintStart_toStartOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/foodImage" />

</androidx.constraintlayout.widget.ConstraintLayout>