<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/walmartLogo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/walmart_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/walmartLogo"
        app:layout_constraintStart_toStartOf="@+id/walmartLogo"
        app:layout_constraintTop_toBottomOf="@+id/walmartLogo" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/cardview_shadow_end_color"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/firstNameRequiredText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_address_required"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signinEmailEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameRequiredText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordRequiredText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password_required"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signinEmailEt" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordRequiredText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPasswordTx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:clickable="true"
                android:text="Forgot Password?"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/passwordEt"
                app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAccBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/blue"
                android:text="@string/btn_sign_in_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTx" />

            <View
                android:id="@+id/leftView"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/noAccountTx"
                app:layout_constraintEnd_toStartOf="@id/noAccountTx"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/noAccountTx" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/noAccountTx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintEnd_toStartOf="@id/rightView"
                app:layout_constraintStart_toEndOf="@+id/leftView"
                app:layout_constraintTop_toBottomOf="@+id/createAccBtn" />

            <View
                android:id="@+id/rightView"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/leftView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/noAccountTx"
                app:layout_constraintTop_toTopOf="@+id/leftView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAccountBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/btn_create_new_account_text"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noAccountTx" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>